solved z-index, bigger line, bigger arrow,  gcode view only test

--- a/gcode/src/CSS/FloatingUI/arrow/arrow.css
+++ b/gcode/src/CSS/FloatingUI/arrow/arrow.css
@@ -1,5 +1,6 @@
 #arrow {
-  border: 0.1rem solid var(--sky-200);
   background-color: var(--sky-50);
-  border-radius: 0.2rem;
+  border-radius: 0.2rem 0 0 0;
+  border-left: 0.1rem solid var(--sky-200);
+  border-top: 0.1rem solid var(--sky-200);
 }
