--- a/gcode/src/CSS/Gline/Gline_hover/Gline_hover.css
+++ b/gcode/src/CSS/Gline/Gline_hover/Gline_hover.css
@@ -1,5 +1,5 @@
 .Gline:hover::before {
-  transform: scale(2) translateY(-25%);
+  transform: scale(1.2) translateY(-50%);
 }
 
 .Gline:hover {
